--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,15 @@
 }
 
 table {
-  border-spacing: 16px;
+  border-spacing: 8px;
+}
+
+td:not(:nth-child(2)) {
+  width: 90px;
+}
+
+td:nth-child(2) {
+  width: 120px;
 }
 
 .table-container {
@@ -22,4 +30,25 @@ table {
 .search-input {
   padding: 6px 8px;
   width: 25%;
+}
+
+.img-contact {
+  width: 80px;
+  max-height: 120px;
+}
+
+.oops {
+  font-size: 24px;
+  position: absolute;
+  top: 25vh;
+  left: 45vw;
+}
+
+button:not(:only-child) {
+  font-size: 16px;
+}
+
+button {
+  cursor: pointer;
+  padding: 4px 8px;
 }
